--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -9,11 +9,17 @@ jobs:
         - name: Checkout Repo
           uses: actions/checkout@v4
          
-        - name: Welcome message
-          run: echo "My first GitHub Actions Job"
+        - name: List and Read file
+          run: |
+            echo "My first GitHub Actions Job"
+            la -ltra
+            cat README.md
 
-        - name: List files
-          run : ls
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....RWAR" >> dragon.txt
+
+        # - name: List files
+        #   run : ls
         
-        - name: Read file
-          run: cat README.md
+        # - name: Read file
+        #   run: cat README.md
