--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -12,7 +12,7 @@ jobs:
         - name: List and Read file
           run: |
             echo "My first GitHub Actions Job"
-            la -ltra
+            ls -ltra
             cat README.md
 
         - name: Generate ASCII Artwork
