Added Test File Exists

--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -15,6 +15,9 @@ jobs:
         - name: Execute Cowsay CMD 
           run: cowsay -f dragon "Run for cover, I am a DRAGON....RWAR" >> dragon.txt
 
+        - name: Test File Exists
+          run: grep -i "dragon" dragon.txt
+
         - name: Read File
           run : cat dragon.txt
         
