Executing Shell Script

--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -12,14 +12,8 @@ jobs:
         - name: Install Cowsay Program
           run: sudo apt-get install cowsay -y
 
-        - name: Execute Cowsay CMD 
-          run: cowsay -f dragon "Run for cover, I am a DRAGON....RWAR" >> dragon.txt
+        - name: Executing Shell Script
+          run: ./ascii-script.sh
 
-        - name: Test File Exists
-          run: grep -i "dragon" dragon.txt
-
-        - name: Read File
-          run : cat dragon.txt
-        
         - name: List Repo Files
           run: ls -ltra
