--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -13,7 +13,9 @@ jobs:
           run: sudo apt-get install cowsay -y
 
         - name: Executing Shell Script
-          run: ./ascii-script.sh
+          run: |
+            chmod +x ascii-script.sh
+            ./ascii-script.sh
 
         - name: List Repo Files
           run: ls -ltra
