Explore job-level variables

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -3,39 +3,70 @@ name: Exploring Variables and Secrets
 on: push
 
 ########### Environment Variables at STEP level ##########
+
+# jobs:
+#   docker:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Docker Build
+#       env:
+#         CONTAINER_REGISTRY: docker.io
+#         DOCKER_USERNAME: mlogan914
+#         IMAGE_NAME: github-actions-nginx
+#       run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+
+#     - name: Docker Login
+#       env:
+#         DOCKER_PASSWORD: s3cUrePaSsw0rd # dummy not real
+#         DOCKER_USERNAME: mlogan914
+#       run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+    
+#     - name: Docker Publish
+#       env:
+#         CONTAINER_REGISTRY: docker.io
+#         DOCKER_USERNAME: mlogan914
+#         IMAGE_NAME: github-actions-nginx
+#       run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+
+#   deploy:
+#     needs: docker
+#     runs-on: ubuntu latest
+#     steps:
+#     - name: Docker Run
+#       env:
+#         CONTAINER_REGISTRY: docker.io
+#         DOCKER_USERNAME: mlogan914
+#         IMAGE_NAME: github-actions-nginx
+#       run: echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+
+########### Environment Variables at JOB level ##########
+
 jobs:
   docker:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Docker Build
-      env:
+    env:
         CONTAINER_REGISTRY: docker.io
         DOCKER_USERNAME: mlogan914
         IMAGE_NAME: github-actions-nginx
+    runs-on: ubuntu-latest
+    steps:
+    - name: Docker Build
       run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
     - name: Docker Login
       env:
         DOCKER_PASSWORD: s3cUrePaSsw0rd # dummy not real
-        DOCKER_USERNAME: mlogan914
       run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
     
     - name: Docker Publish
-      env:
-        CONTAINER_REGISTRY: docker.io
-        DOCKER_USERNAME: mlogan914
-        IMAGE_NAME: github-actions-nginx
       run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
   deploy:
+    env:
+        CONTAINER_REGISTRY: docker.io
+        DOCKER_USERNAME: mlogan914
+        IMAGE_NAME: github-actions-nginx
     needs: docker
     runs-on: ubuntu latest
     steps:
     - name: Docker Run
-      env:
-        CONTAINER_REGISTRY: docker.io
-        DOCKER_USERNAME: mlogan914
-        IMAGE_NAME: github-actions-nginx
       run: echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
-
-########### Environment Variables at JOB level ##########
