Explore workflow-level variables

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -41,12 +41,44 @@ on: push
 
 ########### Environment Variables at JOB level ##########
 
-jobs:
-  docker:
-    env:
+# jobs:
+#   docker:
+#     env:
+#         CONTAINER_REGISTRY: docker.io
+#         DOCKER_USERNAME: mlogan914
+#         IMAGE_NAME: github-actions-nginx
+#     runs-on: ubuntu-latest
+#     steps:
+#     - name: Docker Build
+#       run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+
+#     - name: Docker Login
+#       env:
+#         DOCKER_PASSWORD: s3cUrePaSsw0rd # dummy not real
+#       run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+    
+#     - name: Docker Publish
+#       run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+
+#   deploy:
+#     env:
+#         CONTAINER_REGISTRY: docker.io
+#         DOCKER_USERNAME: mlogan914
+#         IMAGE_NAME: github-actions-nginx
+#     needs: docker
+#     runs-on: ubuntu latest
+#     steps:
+#     - name: Docker Run
+#       run: echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+
+########### Environment Variables at WORKFLOW level ##########
+env:
         CONTAINER_REGISTRY: docker.io
         DOCKER_USERNAME: mlogan914
         IMAGE_NAME: github-actions-nginx
+
+jobs:
+  docker:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Build
@@ -61,10 +93,6 @@ jobs:
       run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
   deploy:
-    env:
-        CONTAINER_REGISTRY: docker.io
-        DOCKER_USERNAME: mlogan914
-        IMAGE_NAME: github-actions-nginx
     needs: docker
     runs-on: ubuntu latest
     steps:
