Fixed runner bug

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -94,7 +94,7 @@ jobs:
 
   deploy:
     needs: docker
-    runs-on: ubuntu latest
+    runs-on: ubuntu-latest
     steps:
     - name: Docker Run
       run: echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
