fixed runner bug for other samples

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -30,7 +30,7 @@ on: push
 
 #   deploy:
 #     needs: docker
-#     runs-on: ubuntu latest
+#     runs-on: ubuntu-latest
 #     steps:
 #     - name: Docker Run
 #       env:
@@ -66,7 +66,7 @@ on: push
 #         DOCKER_USERNAME: mlogan914
 #         IMAGE_NAME: github-actions-nginx
 #     needs: docker
-#     runs-on: ubuntu latest
+#     runs-on: ubuntu-latest
 #     steps:
 #     - name: Docker Run
 #       run: echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
