added repo level secrets

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -74,7 +74,6 @@ on: push
 ########### Environment Variables at WORKFLOW level ##########
 env:
         CONTAINER_REGISTRY: docker.io
-        DOCKER_USERNAME: mlogan914
         IMAGE_NAME: github-actions-nginx
 
 jobs:
@@ -82,19 +81,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Build
-      run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+      run: echo docker build -t ${{env.CONTAINER_REGISTRY}}/${{secrets.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
     - name: Docker Login
       env:
-        DOCKER_PASSWORD: s3cUrePaSsw0rd # dummy not real
-      run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+      run: echo docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
     
     - name: Docker Publish
-      run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+      run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{secrets.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
   deploy:
     needs: docker
     runs-on: ubuntu-latest
     steps:
     - name: Docker Run
-      run: echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{env.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
+      run: echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{secrets.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
