Testing schueduled cron event

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,6 +1,9 @@
 name: Exploring Variables and Secrets
 
-on: push
+on: 
+  # push
+  schedule:
+    - cron: "*/1 * * * *"
 
 ########### Environment Variables at STEP level ##########
 
