Testing workflow dispatch event

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,9 +1,10 @@
 name: Exploring Variables and Secrets
 
 on: 
+  workflow_dispatch:
+  # schedule:
+  #   - cron: "*/5 * * * *"
   # push
-  schedule:
-    - cron: "*/5 * * * *"
 
 ########### Environment Variables at STEP level ##########
 
