--- a/.github/workflows/matrix-configuration.yml
+++ b/.github/workflows/matrix-configuration.yml
@@ -14,7 +14,7 @@ jobs:
       images: [hello-world, alpine]
       exclude:
         - images: alpine
-          os: windwos-latest
+          os: windows-latest
       include:
         - images: amd64/alpine
           os: ubuntu-20.04
