--- a/.github/workflows/matrix-configuration.yml
+++ b/.github/workflows/matrix-configuration.yml
@@ -23,5 +23,5 @@ jobs:
     - name: Echo Docker Details
       run: docker info
     
-    - name: Run Images on ${{ matrix.images }}
+    - name: Run Images on ${{ matrix.os }}
       run: docker run ${{ matrix.images }}
