Added if expression

--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   # schedule:
   #   - cron: "*/5 * * * *"
-  # push
+  push:
 
 ########### Environment Variables at STEP level ##########
 
@@ -94,6 +94,7 @@ jobs:
       run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
   deploy:
+    if: github.ref == 'ref/heads/main'
     needs: docker
     concurrency:
       group: production-deployment
