--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -94,7 +94,7 @@ jobs:
       run: echo docker push ${{env.CONTAINER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
 
   deploy:
-    if: github.ref == 'ref/heads/main'
+    if: github.ref == 'refs/heads/main'
     needs: docker
     concurrency:
       group: production-deployment
