--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -102,7 +102,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Run
-      timeout-minutes: 1
-      run: |
+      # timeout-minutes: 1
+      run: 
+        # |
         echo docker run -d -p 8080:80 ${{env.CONTAINER_REGISTRY}}/${{vars.DOCKER_USERNAME}}/${{env.IMAGE_NAME}}:latest
-        sleep 600s
+        # sleep 600s
